fix(main-menu): add padding-bottom to prevent cutoff of descenders

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -386,7 +386,7 @@ article h2 {
     color: rgb(26, 167, 214);
     position: relative;
     margin-right: 28px;
-    padding: 2px 0 0 0;
+    padding: 2px 0 3 0;
     font-size: 14px;
   }
 
@@ -421,6 +421,7 @@ article h2 {
   .main-menu a {
     border: 0 !important;
     /* Remove borders from off-canvas styling */
+    padding-bottom: 3px;
   }
 }
 
